created appointment details dto using repository jpa projection, and AppointmentDTO static method for conversion from Object[]